--- a/index.html
+++ b/index.html
@@ -1031,7 +1031,7 @@
                         <div class="overlay3"></div>
                         <div class="overlay4"></div>
                     </div>
-                    />
+
                     <hr/>
                     <div class="work-card-body m-2">
                         <p class="project-name text-danger mb-2"><b>E-commerce Project</b></p>
@@ -1052,7 +1052,7 @@
                         <div class="overlay3"></div>
                         <div class="overlay4"></div>
                     </div>
-                    />
+
                     <hr/>
                     <div class="work-card-body m-2">
                         <p class="project-name text-danger mb-2"><b>Noodles Project</b></p>
@@ -1073,7 +1073,7 @@
                         <div class="overlay3"></div>
                         <div class="overlay4"></div>
                     </div>
-                    />
+
                     <hr/>
                     <div class="work-card-body m-2">
                         <p class="project-name text-danger mb-2"><b>MediXare Project</b></p>
@@ -1094,7 +1094,7 @@
                         <div class="overlay3"></div>
                         <div class="overlay4"></div>
                     </div>
-                    />
+
                     <hr/>
                     <div class="work-card-body m-2">
                         <p class="project-name text-danger mb-2"><b>Ice-Cream Project</b></p>
@@ -1115,7 +1115,7 @@
                         <div class="overlay3"></div>
                         <div class="overlay4"></div>
                     </div>
-                    />
+
                     <hr/>
                     <div class="work-card-body m-2">
                         <p class="project-name text-danger mb-2"><b>Home_Z Project</b></p>
@@ -1136,7 +1136,7 @@
                         <div class="overlay3"></div>
                         <div class="overlay4"></div>
                     </div>
-                    />
+
                     <hr/>
                     <div class="work-card-body m-2">
                         <p class="project-name text-danger mb-2"><b>DataTech Project</b></p>
@@ -1157,7 +1157,7 @@
                         <div class="overlay3"></div>
                         <div class="overlay4"></div>
                     </div>
-                    />
+
                     <hr/>
                     <div class="work-card-body m-2">
                         <p class="project-name text-danger mb-2"><b>Axele Project</b></p>
@@ -1178,7 +1178,7 @@
                         <div class="overlay3"></div>
                         <div class="overlay4"></div>
                     </div>
-                    />
+
                     <hr/>
                     <div class="work-card-body m-2">
                         <p class="project-name text-danger mb-2"><b>Bite-Easy Project</b></p>
@@ -1199,7 +1199,7 @@
                         <div class="overlay3"></div>
                         <div class="overlay4"></div>
                     </div>
-                    />
+
                     <hr/>
                     <div class="work-card-body m-2">
                         <p class="project-name text-danger mb-2"><b>Portfolio type Project</b></p>
@@ -1220,7 +1220,7 @@
                         <div class="overlay3"></div>
                         <div class="overlay4"></div>
                     </div>
-                    />
+
                     <hr/>
                     <div class="work-card-body m-2">
                         <p class="project-name text-danger mb-2"><b>Chili Resturant Project</b></p>
@@ -1232,7 +1232,7 @@
             <div class="col-lg-4 col-md-6 mb-3 wow fadeInUp" data-wow-duration="2s">
                 <div class="card bg-light border-0">
                     <div class="main-img">
-                        <img src="./assets/img/project6.png" class="work-img border-2" alt="webdesign"/>
+                        <img src="./assets/img/project7.png" class="work-img border-2" alt="webdesign"/>
                         <a href="https://sobuj-ahmed.github.io/Portfolio-Project5" class="icon" title="Visit Site">
                             <i class="fa-solid fa-link"></i>
                         </a>
@@ -1241,12 +1241,11 @@
                         <div class="overlay3"></div>
                         <div class="overlay4"></div>
                     </div>
-                    />
                     <hr/>
                     <div class="work-card-body m-2">
                         <p class="project-name text-danger mb-2"><b>Philip's Portfolio Project</b></p>
                         <a class="project-btn btn btn-outline-warning px-5 rounded-4 border-3"
-                           href="https://sobuj-ahmed.github.io/Portfolio-Project5">Show Details</a>
+                           href="https://sobuj-ahmed.github.io/Portfolio-Project5">Details</a>
                     </div>
                 </div>
             </div>
@@ -1270,6 +1269,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
 
         <div class="pagination d-flex justify-content-center bg-transparent py-3 wow fadeInUp" data-wow-duration="2S">
