--- a/index.html
+++ b/index.html
@@ -1299,19 +1299,20 @@
         <h2 class="text-warning text-center fw-bold text-uppercase fw-bold wow fadeInUp" data-wow-duration="2s">
             Contact Me</h2>
         <div class="row text-center text-light pt-3 p-3">
-            <div class="col-md-6 mb-3">
-                <div class="mail bg-dark p-3">
-                    <i class="fa-solid fa-envelope contact-icon"></i>
-                    <p class="contact-details">sobuj.ahmed2878@gmail.com</p>
+             <div class="col-md-6 mb-3">
+                <div class="mail bg-success p-3">
+                    <a class="text-white" href="mailto:sheikh.sobuj95@gmail.com"><i class="fa-solid fa-envelope contact-icon"></i></a>
+                    <p class="contact-details"><a class="text-white" href="mailto:sheikh.sobuj95@gmail.com">sheikh.sobuj95@gmail.com</a></p>
                 </div>
-                <div class="location bg-success p-3">
+                <div class="location bg-dark p-3">
                     <i class="fa-solid fa-location-dot contact-icon"></i>
-                    <p class="contact-details">Bhanga,Faridpur</p>
+                    <p class="contact-details">Dhaka,Bangladesh</p>
                 </div>
-                <div class="number bg-dark p-3">
-                    <i class="fa-solid fa-phone contact-icon"></i>
-                    <p class="contact-details">+880 1867570275</p>
+                <div class="number bg-success p-3">
+                    <a class="text-white" href="tel:+8801867570275"><i class="fa-solid fa-phone contact-icon"></i></a>
+                    <p class="contact-details"><a class="text-white" href="tel:+8801867570275">+880 1867570275</a></p>
                 </div>
+
             </div>
             <div class="col-md-6">
                 <div class=contact-form>
