--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
                 <div class="card bg-light border-0">
                     <div class="main-img">
                         <img src="./assets/img/project16.png" class="work-img border-2" alt="webdesign"/>
-                        <a href="https://sobuj-ahmed.github.io/VEER-Project" target="_blank" class="icon" title="Visit Site">
+                        <a href="https://sobuj-ahmed.github.io/Arcadia-Project" target="_blank" class="icon" title="Visit Site">
                             <i class="fa-solid fa-link"></i>
                         </a>
                         <div class="overlay1"></div>
@@ -722,7 +722,7 @@
                     <div class="work-card-body m-2">
                         <p class="project-name text-danger mb-2"><b>Arcadia Project</b></p>
                         <a class="project-btn btn btn-outline-warning px-5 rounded-4 border-3"
-                           href="https://sobuj-ahmed.github.io/VEER-Project" target="_blank">Show Details</a>
+                           href="https://sobuj-ahmed.github.io/Arcadia-Project" target="_blank">Show Details</a>
                     </div>
                 </div>
             </div>
