--- a/index.html
+++ b/index.html
@@ -398,8 +398,8 @@
                     </p>
 
                     <button type="button" class="btn btn-dark mt-2">
-                        <a href="https://drive.google.com/file/d/10phzIJD9zYd9cg1cX4Vmm1i51_QaAN1u/view?usp=drive_link"
-                           class="text-decoration-none text-warning">Download CV</a>
+                        <a href="https://drive.google.com/file/d/1FQ1KfkG9dBv0OfdiNvjEf5PCLKHcsk6T/view?usp=drive_link"
+                          target="_blank" class="text-decoration-none text-warning">Download CV</a>
                     </button>
                 </div>
             </div>
@@ -417,7 +417,7 @@
             Technical Skills</h2>
         <div class="row mt-3">
             <div class="col-md-6 mb-3 wow fadeInUp" data-wow-duration="2s">
-                <div class="skill-card bg-secondary">
+                <div class="card skill-card bg-secondary">
                     <div class="card-img-top d-flex justify-content-center align-items-center">
                         <img src="./assets/img/html.png" class="skill-img">
                     </div>
@@ -429,19 +429,19 @@
                 </div>
             </div>
             <div class="col-md-6 mb-3 wow fadeInUp" data-wow-duration="2s">
-                <div class="skill-card bg-secondary">
+                <div class="card skill-card bg-secondary">
                     <div class="card-img-top d-flex justify-content-center align-items-center">
                         <img src="./assets/img/css.png" class="skill-img" alt="">
                     </div>
                     <div class="card-body text-white text-center">
                         <h4>Cascading Style Sheets</h4>
-                        <p>ascading Style Sheets is a style sheet language used for describing the presentation of a
+                        <p>CSS is a style sheet language used for describing the presentation of a
                             document written in a markup language such as HTML</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-6 mb-3 wow fadeInUp" data-wow-duration="2s">
-                <div class="skill-card bg-secondary">
+                <div class="card skill-card bg-secondary">
                     <div class="card-img-top d-flex justify-content-center align-items-center">
                         <img src="./assets/img/bootstrap.png" class="skill-img" alt="">
                     </div>
@@ -453,14 +453,14 @@
                 </div>
             </div>
             <div class="col-md-6 wow fadeInUp" data-wow-duration="2s">
-                <div class="skill-card bg-secondary">
+                <div class="card skill-card bg-secondary">
                     <div class="card-img-top d-flex justify-content-center align-items-center">
-                        <img src="./assets/img/github.png" class="skill-img" alt="">
+                        <img src="./assets/img/github.png" style="width: 200px;" class="skill-img" alt="">
                     </div>
                     <div class="card-body text-white text-center">
                         <h4>Github</h4>
-                        <p>GitHub is a web-based version control and collaboration platform for software developers.
-                            Microsoft, the biggest single contributor to GitHub</p>
+                        <p>GitHub  is an AI-powered developer platform that allows developers to create.
+                            Microsoft,the biggest single contributor to GitHub</p>
                     </div>
                 </div>
             </div>
@@ -1662,17 +1662,17 @@
 <!-- contact end -->
 <!-- footer start -->
 <section class="footer-area bg-dark">
-    <div class="container text-light py-5 wow fadeInUp" data-wow-duration="2s">
+    <div class="container text-light py-3 wow fadeInUp" data-wow-duration="2s">
         <div class="row w-50 m-auto">
             <h2 class="text-center text-uppercase fw-bold">
                 You have any project
             </h2>
             <hr class="border border-4 bg-light"/>
             <div class="text-center">
-                <a href="https://www.facebook.com/sheikh.md.sobuj95/" class="btn btn-outline-warning w-50">HIRE ME</a>
+                <a href="https://www.facebook.com/sheikh.md.sobuj95/" class="footer-btn btn btn-outline-warning w-75">HIRE ME</a>
             </div>
-            <div class="footer-details my-2">
-                <p class="fs-3">I am <span class="text-warning fw-bold">Sheikh Sobuj</span> who has a professional Web
+            <div class="footer-details text-center my-2">
+                <p>I am <span class="text-warning fw-bold">Sheikh Sobuj</span> who has a professional Web
                     Designer with 1 years of experience. I'm very
                     passionate and dedicated to my work.
                 </p>
@@ -1681,7 +1681,7 @@
         <div class="row">
             <div class="text-center">
                 Copyright © 2023 <a href="https://www.facebook.com/sheikh.md.sobuj95/"
-                                    class="text-decoration-none text-warning fs-5">Sheikh Sobuj</a>
+                                    class="text-decoration-none text-warning">Sheikh Sobuj</a>
             </div>
         </div>
     </div>
